# chalked

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.sh  vite.config.ts
src/: App.tsx  DrawingTab.tsx  WelcomeTab.tsx  excalidrawlib.d.ts  logger.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
